# CppBaseCourse

./: README.md  testRunner.py
Caches/: Makefile  README.md  main.cpp  unit_tests.cpp
Caches/EteTests/: test1.ans.txt  test2.ans.txt  test2.txt  test3.txt
Caches/src/: belady.hpp  lfu.hpp
Caches/test/: unit_tests.cpp
Caches/test/EteTests/: testRunner.py
Matrices/: CMakeLists.txt  Makefile  README.md  main.cpp
Matrices/src/: matrix.hpp  myvector.hpp  rational.cpp  rational.h
Matrices/test/: unit_tests.cpp
Trees/: CMakeLists.txt  Makefile  README.md  build.sh  main.cpp  time.cpp
Trees/src/: avltree.hpp  stdtree.cpp  stdtree.h
Trees/test/: unit_tests.cpp
Triangles/: CMakeLists.txt  Makefile  README.md  main.cpp
Triangles/src/: geo3d_plane.cpp  geo3d_plane.h  geo3d_point.cpp  geo3d_point.h  geo3d_triangle.cpp  geo3d_triangle.h  geo3d_vector.cpp  geo3d_vector.h
Triangles/src/geometry2D/: geo2d_point.h  geo2d_triangle.cpp  geo2d_triangle.h  geo2d_vector.cpp  geo2d_vector.h
Triangles/src/geometry3D/: geo3d_triangle.cpp  geo3d_triangle.h
Triangles/test/: unit_tests.cpp
